--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,16 @@ psycopg2-binary==2.8.4
 pytz==2019.3
 setproctitle==1.1.10
 SQLAlchemy==1.3.14
+sqlacodegen==2.3.0
+certifi==2020.4.5.1
+click==7.1.1
+Flask==1.1.2
+flask-heroku==0.1.9
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+psycopg2==2.8.5
+Werkzeug==1.0.1
+gunicorn==19.5.0
+flask_cors
